Readme file and images added

--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
     />
     <!-- Custom CSS -->
     <link rel="stylesheet" href="./assets/css/style.css" />
-    <title>Work Day Scheduler</title>
+    <title>Day Planner - Work Day Scheduler</title>
   </head>
 
   <body>
